components/03-applications/agents/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: team1
  labels:
    name: team1
    app.kubernetes.io/part-of: kagenti
    istio-injection: enabled
