components/03-applications/agents/code-agent.yaml
apiVersion: v1
kind: Service
metadata:
  name: code-agent
  namespace: team1
  labels:
    app: code-agent
    ai.openshift.io/agent.class: "a2a"
    ai.openshift.io/agent.name: "code-agent"
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: a2a
  selector:
    app: code-agent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-agent
  namespace: team1
  labels:
    app: code-agent
    ai.openshift.io/agent.class: "a2a"
    ai.openshift.io/agent.name: "code-agent"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: code-agent
  template:
    metadata:
      labels:
        app: code-agent
        ai.openshift.io/agent.class: "a2a"
        ai.openshift.io/agent.name: "code-agent"
    spec:
      serviceAccountName: default
      containers:
      - name: agent
        image: localhost:5001/code-agent:v0.0.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: a2a
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 1000m
            memory: 1Gi
