components/03-applications/agents/weather-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-service
  namespace: team1
  labels:
    app: weather-service
    ai.openshift.io/agent.class: "a2a"
    ai.openshift.io/agent.name: "weather-service"
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: a2a
  selector:
    app: weather-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-service
  namespace: team1
  labels:
    app: weather-service
    ai.openshift.io/agent.class: "a2a"
    ai.openshift.io/agent.name: "weather-service"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather-service
  template:
    metadata:
      labels:
        app: weather-service
        ai.openshift.io/agent.class: "a2a"
        ai.openshift.io/agent.name: "weather-service"
    spec:
      serviceAccountName: default
      containers:
      - name: agent
        image: localhost:5000/weather-service:v0.0.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
          name: a2a
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 1000m
            memory: 1Gi
